--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "chrisdaypro@protonmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpmailer/phpmailer": "^6.9"
+    }
 }
