--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,13 @@ DB_USER=root
 DB_PASS=''
 APP_ENV=development
 DEBUG=true
+
+# SMTP Configuration
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USERNAME=monkey0679@gmail.com
+SMTP_PASSWORD=FOhSXKkftxCTYr5v
+SMTP_FROM_EMAIL=contact@chrisdaypro.com
+SMTP_FROM_NAME="Job Queries from Portfolio"
+SMTP_TO_EMAIL=chrisdaypro@protonmail.com
+SMTP_TO_NAME="Christopher Day"
